# aivtuber-base

./: .env.example  .gitignore  README  README.md  aivtuber.py  main.py  pyproject.toml  requirements.txt
components/: aivisspeech.py  diffmotion.py  openai.py  play_sound.py  youtube_comments.py
config/: character.md
